fix spacing issues and colorfills

--- a/src/main/resources/static/css/main-style.css
+++ b/src/main/resources/static/css/main-style.css
@@ -4,6 +4,22 @@
     Main Color Hex Value : #e1e1e1
     Button Hex Value : #43c5f0
  **/
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill,
+textarea:-webkit-autofill,
+textarea:-webkit-autofill:hover,
+textarea:-webkit-autofill:focus,
+select:-webkit-autofill,
+select:-webkit-autofill:hover,
+select:-webkit-autofill:focus {
+    border: 1px solid #ffffff;
+    -webkit-text-fill-color: #ffffff;
+    -webkit-box-shadow: 0 0 0px 1000px #000 inset;
+    transition: background-color 5000s ease-in-out 0s;
+}
+
 html,
 body {
     font-family: 'Montserrat', sans-serif, 'Open Sans', sans-serif;
@@ -770,13 +786,6 @@ select {
     width: 50px;
     height: 50px;
     background: transparent;
-}
-
-
-input -webkit-autofill, textarea -webkit-autofill, select -webkit-autofill {
-    background-color: rgb(255, 255, 255) !important;
-    background-image: none !important;
-    color: rgb(0, 0, 0) !important;
 }
 
 .form-header {
